--- a/templates/history.html
+++ b/templates/history.html
@@ -6,13 +6,12 @@
 <html class="no-js">
 <!--<![endif]-->
 <head>
-    {% load staticfiles %}
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>Portal Aplikasi - Sistem Peminjaman Ruangan Online</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="{% static 'css/main.css' %}">
+<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <!-- Navigation & Logo-->
@@ -31,16 +30,16 @@
 		<nav id="mainmenu" class="mainmenu">
 		<ul>
 			<li class="logo-wrapper">
-				<a href="index.html"><img src="{% static 'img/Kanan.jpg' %}" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
+				<a href="index.html"><img src="img/Kanan.jpg" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
 			</li>
 			<li class="">
-				<a href="../..">Home</a>
+				<a href="index.html">Home</a>
 			</li>
 			<li class="">
-				<a href="../peminjaman">Peminjaman</a>
+				<a href="peminjaman.html">Peminjaman</a>
 			</li>
 			<li class="active">
-				<a href="#">History</a>
+				<a href="history.html">History</a>
 			</li>
 		</ul>
 		</nav>
@@ -49,15 +48,13 @@
 <!-- Services -->
 <div class="section">
 	<div class="container">
-		<center>
-		<h3>Sistem Peminjaman Ruangan Online Fakultas Ilmu Komputer Universitas Indonesia </h3>
-		</center>
+
 		<div class="row">
 				
 				<div class="col-md-4">
 				<div class="service-wrapper">
 				
-				<button>Download Archieve</button>
+				<button class="btn">Download Archieve</button>
 					
 				Sort By
 				<select>
@@ -129,7 +126,7 @@
 <div class="menuextras">
 	<div class="extras">
 		<p align="center">
-			<img src="{% static 'img/foot.png' %}" width="250">
+			<img src="img/foot.png" width="250">
 		</p>
 	</div>
 </div>
