--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,12 @@
 <html class="no-js">
 <!--<![endif]-->
 <head>
-    {% load staticfiles %}
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>Portal Aplikasi - Sistem Peminjaman Ruangan Online</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="{% static 'css/main.css' %}">
+<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <!-- Navigation & Logo-->
@@ -31,16 +30,16 @@
 		<nav id="mainmenu" class="mainmenu">
 		<ul>
 			<li class="logo-wrapper">
-				<a href="index.html"><img src="{% static 'img/Kanan.jpg' %}" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
+				<a href="index.html"><img src="img/Kanan.jpg" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
 			</li>
 			<li class="active">
-				<a href="#">Home</a>
+				<a href="index.html">Home</a>
 			</li>
-			<li>
-				<a href="peminjaman">Peminjaman</a>
+			<li class="">
+				<a href="peminjaman.html">Peminjaman</a>
 			</li>
 			<li class="has-submenu">
-				<a href="peminjaman/history">History</a>
+				<a href="history.html">History</a>
 			</li>
 		</ul>
 		</nav>
@@ -49,13 +48,11 @@
 <!-- Services -->
 <div class="section">
 	<div class="container">
-		<center>
-		<h3>Sistem Peminjaman Ruangan Online Fakultas Ilmu Komputer Universitas Indonesia </h3>
-		</center>
+
 		<div class="row">
 			<div class="col-md-4">
 				<div class="service-wrapper">
-					<img src="{% static 'img/about.png' %}" width="100" alt="Service 1">
+					<img src="img/about.png" width="100" alt="Service 1">
 					<h3>Tentang Simimaru</h3>
 					<p>
 						Simimaru merupakan sebuah project yang dibuat oleh tim proyek pengembangan sistem informasi B09 Fakultas Ilmu Komputer dalam memudahkan mahasiswa maupun dosen untuk melakukan peminjaman ruangan di Fakultas Ilmu Komputer.
@@ -64,7 +61,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="service-wrapper">
-					<img src="{% static 'img/kontak.png' %}" width="120" alt="Service 2">
+					<img src="img/kontak.png" width="120" alt="Service 2">
 					<h3>Kontak Kami</h3>
 					<p>
 						Alamat : Gedung A Lantai 2 Fakultas Ilmu Komputer Depok 16424<br/>
@@ -79,7 +76,7 @@
 <div class="menuextras">
 	<div class="extras">
 		<p align="center">
-			<img src="{% static 'img/foot.png' %}" width="250">
+			<img src="img/foot.png" width="250">
 		</p>
 	</div>
 </div>
