--- a/templates/history.html
+++ b/templates/history.html
@@ -6,12 +6,13 @@
 <html class="no-js">
 <!--<![endif]-->
 <head>
+{% load staticfiles %}
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>Portal Aplikasi - Sistem Peminjaman Ruangan Online</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
 <!-- Navigation & Logo-->
@@ -30,16 +31,16 @@
 		<nav id="mainmenu" class="mainmenu">
 		<ul>
 			<li class="logo-wrapper">
-				<a href="index.html"><img src="img/Kanan.jpg" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
+				<a href="../.."><img src="{% static 'img/Kanan.jpg' %}" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
 			</li>
 			<li class="">
-				<a href="index.html">Home</a>
+				<a href="../..">Home</a>
 			</li>
 			<li class="">
-				<a href="peminjaman.html">Peminjaman</a>
+				<a href="./">Peminjaman</a>
 			</li>
 			<li class="active">
-				<a href="history.html">History</a>
+				<a href="#">History</a>
 			</li>
 		</ul>
 		</nav>
@@ -126,7 +127,7 @@
 <div class="menuextras">
 	<div class="extras">
 		<p align="center">
-			<img src="img/foot.png" width="250">
+			<img src="{% static 'img/foot.png' %}" width="250">
 		</p>
 	</div>
 </div>
