--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,13 @@
 <html class="no-js">
 <!--<![endif]-->
 <head>
+{% load staticfiles %}
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>Portal Aplikasi - Sistem Peminjaman Ruangan Online</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
 <!-- Navigation & Logo-->
@@ -30,16 +31,16 @@
 		<nav id="mainmenu" class="mainmenu">
 		<ul>
 			<li class="logo-wrapper">
-				<a href="index.html"><img src="img/Kanan.jpg" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
+				<a href="#"><img src="{% static 'img/Kanan.jpg' %}" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
 			</li>
 			<li class="active">
-				<a href="index.html">Home</a>
+				<a href="#">Home</a>
 			</li>
 			<li class="">
-				<a href="peminjaman.html">Peminjaman</a>
+				<a href="peminjaman">Peminjaman</a>
 			</li>
 			<li class="has-submenu">
-				<a href="history.html">History</a>
+				<a href="peminjaman/history">History</a>
 			</li>
 		</ul>
 		</nav>
@@ -52,7 +53,7 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="service-wrapper">
-					<img src="img/about.png" width="100" alt="Service 1">
+					<img src="{% static 'img/about.png' %}" width="100" alt="Service 1">
 					<h3>Tentang Simimaru</h3>
 					<p>
 						Simimaru merupakan sebuah project yang dibuat oleh tim proyek pengembangan sistem informasi B09 Fakultas Ilmu Komputer dalam memudahkan mahasiswa maupun dosen untuk melakukan peminjaman ruangan di Fakultas Ilmu Komputer.
@@ -61,7 +62,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="service-wrapper">
-					<img src="img/kontak.png" width="120" alt="Service 2">
+					<img src="{% static 'img/kontak.png' %}" width="120" alt="Service 2">
 					<h3>Kontak Kami</h3>
 					<p>
 						Alamat : Gedung A Lantai 2 Fakultas Ilmu Komputer Depok 16424<br/>
@@ -76,7 +77,7 @@
 <div class="menuextras">
 	<div class="extras">
 		<p align="center">
-			<img src="img/foot.png" width="250">
+			<img src="{% static 'img/foot.png' %}" width="250">
 		</p>
 	</div>
 </div>
