--- a/templates/peminjaman.html
+++ b/templates/peminjaman.html
@@ -6,12 +6,13 @@
 <html class="no-js">
 <!--<![endif]-->
 <head>
+{% load staticfiles %}
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>Portal Aplikasi - Sistem Peminjaman Ruangan Online</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
 <!-- Navigation & Logo-->
@@ -30,16 +31,16 @@
 		<nav id="mainmenu" class="mainmenu">
 		<ul>
 			<li class="logo-wrapper">
-				<a href="index.html"><img src="img/Kanan.jpg" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
+				<a href="/.."><img src="{% static 'img/Kanan.jpg' %}" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
 			</li>
 			<li class="">
-				<a href="index.html">Home</a>
+				<a href="/..">Home</a>
 			</li>
 			<li class="active">
-				<a href="peminjaman.html">Peminjaman</a>
+				<a href="#">Peminjaman</a>
 			</li>
 			<li class="has-submenu">
-				<a href="history.html">History</a>
+				<a href="history">History</a>
 			</li>
 		</ul>
 		</nav>
@@ -54,7 +55,7 @@
 				<div class="col-md-4">
 				<div class="service-wrapper">
 				
-				<input class="btn" type=button onClick="parent.location='createnew.html'" value='Create New'>
+				<input class="btn" type=button onClick="parent.location='ruangan'" value='Create New'>
 				<input class="btn" type=button onClick="parent.location='#'" value='Import Jadwal'>
 				<input class="btn" type=button onClick="parent.location='#'" value='Lihat Alur Peminjaman'>
 				<select>
@@ -119,7 +120,7 @@
 <div class="menuextras">
 	<div class="extras">
 		<p align="center">
-			<img src="img/foot.png" width="250">
+			<img src="{% static 'img/foot.png' %}" width="250">
 		</p>
 	</div>
 </div>
