Perubahan Max_Length di Database
-username max_length jadi 50 dari 20
-nama max_length jadi 50 dari 30
-role max_length jadi 50 dari 20
-komen max_length jadi 200 dari 140

--- a/templates/history.html
+++ b/templates/history.html
@@ -92,7 +92,7 @@
     <tr>
         <td >1.</td>
         <td >{{ x.tanggal }}</td>
-        <td >{{ x.waktu_mulai|H:m }} - {{ x.waktu_selesai }}</td>
+        <td >{{ x.waktu_mulai }} - {{ x.waktu_selesai }}</td>
         <td >{{ x.peminjam_username.nama }}</td>
         <td >Mahasiswa</td>
 		<td >{{ x.ruangan_id.lantai }}.{{ x.ruangan_id.nomor }}</td>
