RETRIEVE KOMENTAR SELESAI, CREATE KOMENTAR SEDIKIT LAGI, SEMANGAT GUYS

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 <!-- Navigation & Logo-->
+{{ response }}
 <div class="mainmenu-wrapper">
 	<div class="container">
 		<div class="menuextras">
