--- a/templates/detailpeminjaman.html
+++ b/templates/detailpeminjaman.html
@@ -12,7 +12,7 @@
 <title>Portal Aplikasi - Sistem Peminjaman Ruangan Online</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
 <!-- Navigation & Logo-->
@@ -31,16 +31,16 @@
 		<nav id="mainmenu" class="mainmenu">
 		<ul>
 			<li class="logo-wrapper">
-				<a href="index.html"><img src="img/Kanan.jpg" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
+				<a href="/.."><img src="{% static 'img/Kanan.jpg' %}" width="250" alt="Multipurpose Twitter Bootstrap Template"></a>
 			</li>
 			<li class="">
-				<a href="index.html">Home</a>
+				<a href="/..">Home</a>
 			</li>
 			<li class="active">
-				<a href="peminjaman.html">Peminjaman</a>
+				<a href="#">Peminjaman</a>
 			</li>
-			<li class="">
-				<a href="history.html">History</a>
+			<li class="has-submenu">
+				<a href="history">History</a>
 			</li>
 		</ul>
 		</nav>
@@ -64,7 +64,7 @@
 								<table border="1">
 								<tr>
 									<td width="200">
-										<label class="desc" id="title1" for="Field1">ID</label>
+										<label class="desc" id="title1" name='id' value='1' for="Field1">ID</label>
 									</td>
 									<td width="300">ID</td>
 								</tr>
@@ -130,13 +130,18 @@
 								</table>
 							</td>
 							<td width="600">
-								<textarea id="Field4" name="Field4" spellcheck="true" rows="3" cols="50" tabindex="4">Masukkan Komentar</textarea><br/>
-								<input type="button" value="SUBMIT">
+                                <form method="POST" action="./suksesdetail">
+                                    {% csrf_token %}
+								<textarea id="Field4" name="komentar" spellcheck="true" rows="3" cols="50" tabindex="4">Masukkan Komentar</textarea><br/>
+								<button type="submit" value="Sort">Submit</button></form>
 								<form>
 									<fieldset>
 										<legend>Komentar :</legend>
 										<p>
-											 Belum ada komentar
+                                            {% for x in komentar %}
+                                                <p><b>'{{ x.komen }}'</b> <h6>{{ x.timestamp }}| {{ x.user_komentar_id }}</h6></p>
+
+                                            {% endfor %}
 										</p>
 									</fieldset>
 								</form>
@@ -154,7 +159,7 @@
 <div class="menuextras">
 <div class="extras">
 	<p align="center">
-		<img src="img/foot.png" width="250">
+		<img src="{% static 'img/foot.png' %}" width="250">
 	</p>
 </div>
 </div>
