--- a/templates/peminjaman.html
+++ b/templates/peminjaman.html
@@ -21,7 +21,7 @@
 		<div class="menuextras">
 			<div class="extras">
 				<ul>
-					<li>Login sebagai Zahrul Addini</li>
+					<li id="username" value="cs-04">Login sebagai Zahrul Addini </li>
 					<li>
 						<a href="#">Logout</a>
 					</li>
@@ -69,7 +69,7 @@
 					<table cellspacing="0" align="center">
     
 	<tr>
-        <th>ID</th>
+        <th>IDaaaa</th>
         <th>Tanggal</th>
         <th>Jam</th>
         <th>Penanggung Jawab</th>
@@ -92,7 +92,7 @@
         <td >4</td>
         <td >Manajer Kemahasiswaan</td>
         <td >Yes or No</td>
-		<td><a href="#">Update</a> | <a href="#">delete</a></td>
+		<td><a href="#">Update</a> | <a href="#">delete</a> | <a href="#">lihat detail</a></td>
     </tr>
       <tr>
         <td >6767</td>
