--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1759,6 +1759,19 @@ input[type=file]:focus,input[type=radio]:focus,input[type=checkbox]:focus {
     outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px;
 }
+.mac {
+border-radius: 10px;
+padding: 5px 8px;
+color: #333;
+
+}
+.mac:focus {
+outline: none;
+box-shadow:
+inset 0 2px 0 rgba(0,0,0,.2),
+0 0 4px rgba(0,0,0,0.1),
+0 0 5px 1px #51CBEE;
+}
 
 output {
     display: block;
